Thu Feb 12 03:28:05 2015  Eric Wong  <e@80x24.org>

	* lib/set.rb (initialize): internal hash defaults to false

	* lib/set.rb (include?): use Hash#[] for optimized dispatch.
	  Patch by Ismael Abreu <ismaelga@gmail.com>
	  [ruby-core:67664] [Misc #10754]

Wed Feb 11 11:09:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/digest_conf.rb (digest_conf): check for CommonDigest.

	* ext/digest/*/*cc.h: for Apple CommonCrypto/CommonDigest.h.

	* ext/digest/digest.h (DEFINE_FINISH_FUNC_FROM_FINAL): macro for
	  finish functions, by inverting arguments order.

	* ext/digest/digest_conf.rb (digest_conf): extract common
	  configurations.

Wed Feb 11 11:01:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/generator/generator.c (generate_json): get rid of
	  unnecessary recursive calls which can cause infinite recursion.
	  T_STRING may not have rb_cString.

Wed Feb 11 07:53:35 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_word.rb: use skip method to skip test.

Tue Feb 10 11:38:28 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): stop method search when a method
	  is not found in a refinement, to support undef in refinements.
	  [ruby-core:66741] [Bug #10578]

Tue Feb 10 11:19:11 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (chdir, delete, gettextfile, mdtm, mkdir, nlst,
	  putbinaryfile, puttextfile, rename, rmdir, size): support
	  Pathname. Patch by Joe Rafaniello. [fix GH-828]

Mon Feb  9 16:36:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): get rid of loading unbundled and
	  unexpected libraries.  [ruby-core:67977] [Bug #10822]

Sun Feb  8 20:09:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/http/header.rb: pass header names as symbols.
	  Patch by @DamirSvrtan [fix GH-805]
	* test/net/http/test_httpheader.rb: added test.

Sun Feb  8 13:04:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
