@@ -57,24 +57,6 @@ cmp_eq_recursive(VALUE arg1, VALUE arg2, int recursive)
     return rb_funcallv(arg1, cmp, 1, &arg2);
 }
 
-static VALUE
-cmp_eq(VALUE *a)
-{
-    VALUE c = rb_exec_recursive_paired_outer(cmp_eq_recursive, a[0], a[1], a[1]);
-
-    if (NIL_P(c)) return Qfalse;
-    if (rb_cmpint(c, a[0], a[1]) == 0) return Qtrue;
-    return Qfalse;
-}
-
-static VALUE
-cmp_failed(void)
-{
-    rb_warn("Comparable#== will no more rescue exceptions of #<=> in the next release.");
-    rb_warn("Return nil in #<=> if the comparison is inappropriate or avoid such comparison.");
-    return Qfalse;
-}
-
 /*
  *  call-seq:
  *     obj == other    -> true or false
@@ -90,12 +72,14 @@ cmp_failed(void)
 static VALUE
 cmp_equal(VALUE x, VALUE y)
 {
-    VALUE a[2];
-
+    VALUE c;
     if (x == y) return Qtrue;
 
-    a[0] = x; a[1] = y;
-    return rb_rescue(cmp_eq, (VALUE)a, cmp_failed, 0);
+    c = rb_exec_recursive_paired_outer(cmp_eq_recursive, x, y, y);
+
+    if (NIL_P(c)) return Qfalse;
+    if (rb_cmpint(c, x, y) == 0) return Qtrue;
+    return Qfalse;
 }
 
 /*
